Modifications for C# solution
- Modified some unit test for Pawn and ChessBoard.
- Added interface for movement.
- Modified implementation for movement, the type is no more necessary as an input.
- Added singleton for chess board.
- Added a Game project with small demo to test the entire library.

--- a/ChessProject-Csharp/src/Chess.csproj
+++ b/ChessProject-Csharp/src/Chess.csproj
@@ -44,9 +44,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChessBoard.cs" />
-    <Compile Include="MovementType.cs" />
-    <Compile Include="Pawn.cs" />
-    <Compile Include="PieceColor.cs" />
+    <Compile Include="Enums\MovementType.cs" />
+    <Compile Include="Pieces\ChessPiece.cs" />
+    <Compile Include="Pieces\Pawn.cs" />
+    <Compile Include="Enums\PieceColor.cs" />
+    <Compile Include="Pieces\IPieceMovement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
